fix image source

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <h1 class="display-5 fw-bold py-5">QR Code Generator</h1>
         <div class="col-lg-6 mx-auto">
-            <img class="d-block mx-auto mb-4" src="/generated_qr.png" alt="" width="500" height="500">
+            <img class="d-block mx-auto mb-4" src="generated_qr.png" alt="" width="500" height="500">
             <div class="py-5">
                 <iframe src="output.txt" width="400" height="50" style="background-color: white; border: 1px solid #ccc;"></iframe>
             </div>
